WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59810
Crash when closing a tab that is unresponsive
https://bugs.webkit.org/show_bug.cgi?id=59810
Summary
Crash when closing a tab that is unresponsive
Anders Carlsson
Reported
2011-04-29 11:03:01 PDT
Crash when closing a tab that is unresponsive
Attachments
Patch
(1.52 KB, patch)
2011-04-29 11:05 PDT
,
Anders Carlsson
bweinstein
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-29 11:05:49 PDT
Created
attachment 91703
[details]
Patch
Anders Carlsson
Comment 2
2011-04-29 11:10:57 PDT
Committed
r85339
: <
http://trac.webkit.org/changeset/85339
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug