2011-04-29  Anders Carlsson  <andersca@apple.com>

Reviewed by Brian Weinstein.

        Crash when closing a tab that is unresponsive
        https://bugs.webkit.org/show_bug.cgi?id=59810
        <rdar://problem/9329133>

        Back out r84643 - there was no rationale for this change, and it's causing crashes.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::close):
        (WebKit::WebPageProxy::processDidCrash):


git-svn-id: svn://svn.chromium.org/blink/trunk@85339 bbb929c8-8fbe-4397-9dbb-9b2b20218538