third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -354,8 +354,6 @@ void WebPageProxy::close()
 
     m_drawingArea.clear();
 
-    process()->responsivenessTimer()->stop();
-
     process()->send(Messages::WebPage::Close(), m_pageID);
     process()->removeWebPage(m_pageID);
 }
@@ -2826,8 +2824,6 @@ void WebPageProxy::processDidCrash()
     dismissCorrectionPanel(ReasonForDismissingCorrectionPanelIgnored);
     m_pageClient->dismissDictionaryLookupPanel();
 #endif
-
-    process()->responsivenessTimer()->stop();
 }
 
 WebPageCreationParameters WebPageProxy::creationParameters() const
